fixed the display of dropdown button by setting the toolbar overflow to visible

--- a/client/css/Slides.css
+++ b/client/css/Slides.css
@@ -496,7 +496,7 @@ header #login {
   left: 0;
   width: 100%;
   height: 30px;
-  overflow: hidden;
+  overflow: visible;
   padding-top: 5px;
   padding-left: 10px;
   padding-right: 10px;
