--- a/client/less/toolbar.less
+++ b/client/less/toolbar.less
@@ -6,7 +6,7 @@
 	width: 100%;
 	height:30px;
 	
-	overflow:hidden;
+	overflow:visible;
 	
 	padding-top:5px;
 	padding-left: 10px;
